fixes header in event card to not overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -73,6 +73,10 @@ $gunmetal: #293241ff;
   img {
     height: 10rem;
   }
+  .h5 {
+    overflow: hidden;
+    height: 3.3rem;
+  }
   p {
     height: 0rem;
     overflow: hidden;
